# bgcollection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: config.py  database.py  main.py  settings.toml
src/clients/: bgg.py
src/components/: card.py  details.py  form.py  grid.py  nav.py  search.py
src/components/pages/: base.py  collection.py  collections.py  search.py
src/data/: board_game_repository.py
src/models/: board_game.py
src/repositories/: board_games.py
