[project]
name = "bgcollection"
version = "0.1.0"
description = "bgcollection is a Python app built with Flet to catalog your board game collection."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Matyas Sandor", email = "sandormatyas7@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "sqlmodel (>=0.0.24,<0.0.25)",
  "dynaconf (>=3.2.11,<4.0.0)",
  "requests (>=2.32.4,<3.0.0)"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.sandormatyas"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "bgcollection"

# company name to display in about app dialogs
company = "BGCollection"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
ruff = "^0.12.5"
pre-commit = "^4.2.0"
